# web2cli

./: .gitignore  LEGAL.md  LICENSE  README.md  pyproject.toml
adapter-specs/: adapter-spec-v0.2.md
adapters/discord.com/: web2cli.yaml
adapters/discord.com/builders/: channels.py  dm_messages.py  dm_send.py  messages.py  resolve.py  send.py
adapters/discord.com/parsers/: dm.py  messages.py  send.py
adapters/mail.google.com/parsers/: inbox.py
adapters/news.ycombinator.com/: web2cli.yaml
adapters/news.ycombinator.com/parsers/: stories_html.py  top.py
adapters/reddit.com/: web2cli.yaml
adapters/reddit.com/parsers/: thread.py
adapters/slack.com/: web2cli.yaml
adapters/slack.com/builders/: channels.py  dm.py  dm_messages.py  dm_send.py  me.py  messages.py  resolve.py  send.py
adapters/slack.com/parsers/: channels.py  dm.py  me.py  messages.py  send.py
adapters/stackoverflow.com/: web2cli.yaml
adapters/stackoverflow.com/parsers/: question.py
adapters/x.com/: web2cli.yaml
adapters/x.com/builders/: common.py  following.py  profile.py  resolve.py  search.py  timeline.py  transaction.py  tweet.py
adapters/x.com/parsers/: profile.py  search.py  timeline.py  tweet.py
adapters/x.com/providers/: x_graphql.py
browse-tests/: .env.example  browse.js  package-lock.json
browse-tests/web2cli-browse/: browse-jsdom.js  browse.js  package.json
docs/: adapter-spec.md  adapter-spec.schema.json  custom-adapters-quickstart.md  llm-adapter-playbook.md
src/web2cli/: __init__.py  __main__.py  cli.py  pipe.py  types.py
src/web2cli/adapter/: lint.py  loader.py  validator.py
src/web2cli/adapters/discord.com/: web2cli.yaml
src/web2cli/adapters/mail.google.com/: web2cli.yaml
src/web2cli/auth/: browser_login.py  manager.py  store.py
src/web2cli/executor/: builder.py  http.py
src/web2cli/output/: formatter.py
src/web2cli/parser/: custom.py  html_parser.py  json_parser.py  transforms.py
src/web2cli/providers/: __init__.py  base.py  registry.py
src/web2cli/runtime/: __init__.py  cache.py  engine.py  parser.py  template.py
src/web2cli/v2/: __init__.py  cache.py  engine.py  parser.py  template.py
src/web2cli/v2/providers/: __init__.py  (+3 more)
(+4 files in other folders)
