[project]
name = "web2cli"
version = "0.2.0"
description = "Every website is a command"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Michal Oblak", email = "oblak.michal@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.24.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "rich>=14.0",
    "selectolax>=0.3.0",
    "jmespath>=1.1.0",
    "cryptography>=46.0",
    "curl_cffi>=0.7.0",
    "beautifulsoup4>=4.12",
    "XClientTransaction>=1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/jb41/web2cli"
Repository = "https://github.com/jb41/web2cli"
Issues = "https://github.com/jb41/web2cli/issues"

[project.scripts]
web2cli = "web2cli.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"web2cli" = [
    "adapters/**/*.yaml",
    "adapters/**/*.py",
]
